<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    android:paddingHorizontal="16dp"
    tools:context=".ui.detailEvent.DetailFragment"
    android:paddingBottom="?attr/actionBarSize">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progressBarDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <!-- Cover Image -->
    <ImageView
        android:id="@+id/coverImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/image_desc_event"
        android:scaleType="centerCrop"
        tools:src="@color/cardview_dark_background" />


    <TextView
        android:id="@+id/eventCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:textSize="13sp" />

    <!-- Event Title -->
    <TextView
        android:id="@+id/eventName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:textColor="?attr/colorOnBackground"
        android:textSize="24sp"
        android:textStyle="bold" />

    <!-- Event Summary -->
    <TextView
        android:id="@+id/eventSummary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp" />

    <!--Detail-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/detail_title"
        android:textColor="?attr/colorOnBackground"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        tools:layout_editor_absoluteX="6dp">

        <!--Owner-->
        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/owner_dummy"
                android:textSize="13sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/eventOwner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp" />
        </TableRow>

        <!--Owner-->
        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/location_dummy"
                android:textSize="13sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/eventLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp" />
        </TableRow>

        <!--kuota-->
        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/kuota_peserta_dummy"
                android:textSize="13sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/eventQuota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp" />
        </TableRow>

        <!--Waktu Mulai-->
        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/waktu_mulai_title"
                android:textSize="13sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/eventBeginTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp" />
        </TableRow>

        <!--Waktu akhir-->
        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/waktu_berakhir_title"
                android:textSize="13sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/eventEndTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp" />
        </TableRow>
    </TableLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/deskripsi_title"
            android:textColor="?attr/colorOnBackground"
            android:textSize="20sp"
            android:textStyle="bold" />

    <!-- Event Description -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">

        <TextView
            android:id="@+id/eventDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textColor="?attr/colorOnBackground"
            android:textSize="14sp" />
    </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/eventButtonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autoLink="web"
            android:text="@string/button_text" />

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <!-- Text "Sisa Kuota :" -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sisa_kuota_title"
            android:textColor="?attr/colorOnBackground"
            android:textSize="14sp" />

        <!-- TextView untuk nilai kuota -->
        <TextView
            android:id="@+id/eventQuotaValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>


    </LinearLayout>
</ScrollView>
